[project]
name = "sqlalchemy-storage"
version = "0.1.0"
description = "SQLAlchemy support for storage file"
readme = "README.md"
authors = [
    { name = "Muhammad Daffa Dinaya", email = "muhammaddaffadinaya@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=14.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
