[project]
name = "sqlalchemy_storages"
version = "0.1.0"
description = "SQLAlchemy support for storage file"
readme = "README.md"
authors = [
    { name = "Muhammad Daffa Dinaya", email = "muhammaddaffadinaya@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aioboto3>=14.3.0",
    "pillow>=11.2.1",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "moto==4.2.11",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]
